--- a/cart/index.html
+++ b/cart/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="w-full min-h-screen bg-zinc-100 font-['gilroy']">
+    <div class="w-full min-h-screen bg-zinc-100 font-['gilroy'] py-4">
         <div class="nav flex justify-between items-center px-5 py-5 relative">
             <i class="text-lg ri-menu-2-line"></i>
             <i class="carticon text-lg ri-shopping-bag-2-fill"></i>
@@ -50,45 +50,10 @@
         <div class="products whitespace-nowrap flex overflow-auto px-5 gap-5">
             
         </div>
-        <div class="populardiv mt-5">
+        <div class="populardiv mt-5 mb-28">
             <h3 class="text-2xl pl-5 font-semibold">Popular</h3>
             <div class="populars mt-5 flex whitespace-nowrap gap-5 overflow-auto w-full pl-5">
-                <div class="popular bg-white p-2 rounded-2xl flex items-start gap-3 w-[60%] flex-shrink-0">
-                    <div class="w-20 h-20 bg-red-500 flex-shrink-0 rounded-2xl border-4 border-white overflow-hidden">
-                        <img class="w-full h-full object-cover"
-                            src="https://images.unsplash.com/photo-1571575173700-afb9492e6a50?q=80&w=3412&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            alt="">
-                    </div>
-                    <div class="data py-2 w-full">
-                        <h1 class="leading-none font-semibold">Eyes Lounge</h1>
-                        <h4 class="leading-none mt-2 text-sm font-semibold opacity-20">Bisco Do Lobo</h4>
-                        <h4 class="mt-3 font-semibold text-zinc-500">$12,000</h4>
-                    </div>
-                </div>
-                <div class="popular bg-white p-2 rounded-2xl flex items-start gap-3 w-[60%] flex-shrink-0">
-                    <div class="w-20 h-20 bg-red-500 flex-shrink-0 rounded-2xl border-4 border-white overflow-hidden">
-                        <img class="w-full h-full object-cover"
-                            src="https://images.unsplash.com/photo-1571575173700-afb9492e6a50?q=80&w=3412&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            alt="">
-                    </div>
-                    <div class="data py-2 w-full">
-                        <h1 class="leading-none font-semibold">Eyes Lounge</h1>
-                        <h4 class="leading-none mt-2 text-sm font-semibold opacity-20">Bisco Do Lobo</h4>
-                        <h4 class="mt-3 font-semibold text-zinc-500">$12,000</h4>
-                    </div>
-                </div>
-                <div class="popular bg-white p-2 rounded-2xl flex items-start gap-3 w-[60%] flex-shrink-0">
-                    <div class="w-20 h-20 bg-red-500 flex-shrink-0 rounded-2xl border-4 border-white overflow-hidden">
-                        <img class="w-full h-full object-cover"
-                            src="https://images.unsplash.com/photo-1571575173700-afb9492e6a50?q=80&w=3412&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            alt="">
-                    </div>
-                    <div class="data py-2 w-full">
-                        <h1 class="leading-none font-semibold">Eyes Lounge</h1>
-                        <h4 class="leading-none mt-2 text-sm font-semibold opacity-20">Bisco Do Lobo</h4>
-                        <h4 class="mt-3 font-semibold text-zinc-500">$12,000</h4>
-                    </div>
-                </div>
+                
             </div>
         </div>
         <div class="footer flex items-center justify-between px-10 fixed bottom-0 left-0 w-full py-5 bg-white">
