--- a/youtubemusic/index.html
+++ b/youtubemusic/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <div id="main">
-        <div id="left"></div>
+        <div id="left">
+            
+        </div>
         <div id="right">
             <h3>All Songs. </h3>
             <div id="all-songs">
-
             </div>
         </div>
     </div>
